--- a/diary20170731.md
+++ b/diary20170731.md
@@ -1,2 +1,2 @@
 - ["1", "2", "3"].map(parseInt) 答案是多少？
-* &emsp; 参考链接：http://blog.csdn.net/justjavac/article/details/19473199
+ * 参考链接：http://blog.csdn.net/justjavac/article/details/19473199
