--- a/diary20170731.md
+++ b/diary20170731.md
@@ -4,3 +4,7 @@
   * 参考链接：https://juejin.im/post/5835853f570c35005e413b19
 - 一张图看懂 Function 和 Object 的关系及简述 instanceof 运算符
   * 参考链接：https://juejin.im/post/58358606570c35005e4142bd
+- 一张图看懂JavaScript中数组的迭代方法：forEach、map、filter、reduce、every、some
+  * 参考链接：https://juejin.im/post/5835808067f3560065ed4ab2#comment
+- 一张图看懂encodeURI、encodeURIComponent、decodeURI、decodeURIComponent的区别
+  * 参考链接：https://juejin.im/post/5835836361ff4b0061f38a5d
